<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EventCreationActivity">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Back Button -->
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="Back Button"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title Section -->
            <TextView
                android:id="@+id/tvEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center_vertical"
                android:text="Create Event"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Event Title Input -->
            <EditText
                android:id="@+id/titleInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Title*"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEventTitle" />

            <!-- Date Section -->
            <ImageView
                android:id="@+id/calendarIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_calendar_today_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleInput" />

            <EditText
                android:id="@+id/yearInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Year"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
                app:layout_constraintEnd_toStartOf="@id/monthInput"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/calendarIcon"
                app:layout_constraintTop_toTopOf="@id/calendarIcon" />

            <EditText
                android:id="@+id/monthInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Month"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
                app:layout_constraintEnd_toStartOf="@id/dayInput"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/yearInput"
                app:layout_constraintTop_toTopOf="@id/calendarIcon" />

            <EditText
                android:id="@+id/dayInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Day"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/monthInput"
                app:layout_constraintTop_toTopOf="@id/calendarIcon" />
            <!-- Start Time Section -->
            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_access_time_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yearInput" />

            <EditText
                android:id="@+id/hourInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Start Hour"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/timeIcon"
                app:layout_constraintEnd_toStartOf="@id/minuteInput"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/timeIcon"
                app:layout_constraintTop_toTopOf="@id/timeIcon" />

            <EditText
                android:id="@+id/minuteInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Start Minute"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/timeIcon"
                app:layout_constraintEnd_toStartOf="@id/ampmSpinner"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/hourInput"
                app:layout_constraintTop_toTopOf="@id/timeIcon" />

            <Spinner
                android:id="@+id/ampmSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/am_pm_options"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/timeIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/minuteInput"
                app:layout_constraintTop_toTopOf="@id/timeIcon" />

            <!-- End Time Section -->

            <!-- Location Section -->
            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minuteInput" />

            <EditText
                android:id="@+id/locationInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Location*"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/locationIcon"
                app:layout_constraintTop_toTopOf="@id/locationIcon" />

            <!-- Checkboxes -->
            <CheckBox
                android:id="@+id/geoLocationCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Require Geolocation"
                app:layout_constraintStart_toStartOf="@+id/locationInput"
                app:layout_constraintTop_toBottomOf="@id/locationInput" />

            <!-- Max Winners and Entrants Section -->
            <ImageView
                android:id="@+id/winnersIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/baseline_star_outline_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/geoLocationCheckbox" />

            <!-- Description -->
            <EditText
                android:id="@+id/maxWinnersInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Max Winners*"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/winnersIcon"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/winnersIcon"
                app:layout_constraintTop_toTopOf="@id/winnersIcon" />

            <EditText
                android:id="@+id/maxEntrantsInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="Max Entrants"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/winnersIcon"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/maxWinnersInput"
                app:layout_constraintTop_toTopOf="@+id/winnersIcon" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:minLines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxWinnersInput" />

            <!-- Add Image Button -->
            <Button
                android:id="@+id/addImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#00FFFFFF"
                android:text="+ Add Poster"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/descriptionInput"
                app:layout_constraintTop_toBottomOf="@id/descriptionInput"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />

            <!-- Create Button -->
            <Button
                android:id="@+id/createButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                android:text="Create"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addImageButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
